--- a/puzzles-core/pom.xml
+++ b/puzzles-core/pom.xml
@@ -3,11 +3,17 @@
   <groupId>com.puzzles.movieticket</groupId>
   <artifactId>puzzles-core</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>war</packaging>
+  
+  <name>${project.artifactId}</name>
+  <url>http://www.puzzles.com</url>
+	
   <properties>
 		<spring.version>4.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<hibernate.version>4.3.7.Final</hibernate.version>
 		<mysqlconnector.version>5.1.34</mysqlconnector.version>
+		<resteasy.version>3.0.10.Final</resteasy.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -31,6 +37,20 @@
 			<version>${spring.version}</version>
 		</dependency>
 
+	<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
+	
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
@@ -41,6 +61,34 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${mysqlconnector.version}</version>
+		</dependency>
+		
+		<!-- rest easy core library -->
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jaxrs</artifactId>
+			<version>${resteasy.version}</version>
+		</dependency>
+
+		<!-- rest easy Spring integration -->
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-spring</artifactId>
+			<version>${resteasy.version}</version>
+		</dependency>
+
+		<!-- rest easy XML integration -->
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jaxb-provider</artifactId>
+			<version>${resteasy.version}</version>
+		</dependency>
+
+		<!-- rest easy JSON integration -->
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jettison-provider</artifactId>
+			<version>${resteasy.version}</version>
 		</dependency>
 		
 		
@@ -63,15 +111,9 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.5</version>
-			<scope>test</scope>
+			<scope>compile</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-			<version>${spring.version}</version>
-			<scope>test</scope>
-		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -89,6 +131,12 @@
 	</dependencies>
 
 	<build>
+	
+	 <testResources>
+            <testResource>
+                <directory>src/main/webapp/WEB-INF</directory>
+            </testResource>
+        </testResources>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -98,6 +146,21 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			
+			   <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat8-maven-plugin</artifactId>
+                <version>2.0</version>
+                <configuration>
+                    <!-- http port -->
+                    <port>8080</port>
+                    <!-- application path always starts with / -->
+                    <path>/puzzles</path>
+                    <useTestClasspath>false</useTestClasspath>
+                    <contextReloadable>true</contextReloadable>
+                </configuration>
+            </plugin>
+            
 		</plugins>
 	</build>
   
