--- a/puzzles-core/pom.xml
+++ b/puzzles-core/pom.xml
@@ -43,6 +43,14 @@
 			<version>${spring.version}</version>
 		</dependency>
 
+			<dependency>
+	        <groupId>net.sf.json-lib</groupId>
+	        <artifactId>json-lib</artifactId>
+	        <version>2.4</version>
+	        <classifier>jdk15</classifier>
+		 </dependency>
+		
+		
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
